# snake-game-terminal

./: CMakeLists.txt  CollectItem.cpp  CollectItem.h  DOKUMENTACE.md  FilePrinter.cpp  FilePrinter.h  GameControl.cpp  GameControl.h  GameMenu.cpp  GameMenu.h  Item.cpp  Item.h  README.md  Snake.cpp  Snake.h  Walls.cpp  Walls.h  kbhit.cpp  kbhit.h  main.cpp  todo.md
entities/: Item.cpp  Item.h  Snake.cpp  Snake.h  Walls.cpp  Walls.h
game/: Game.cpp  Game.h  GameMenu.cpp  GameMenu.h
game_tests/: game_test.cpp
res/: 0.txt  2.txt  3.txt  5.txt  6.txt  9.txt  controls_table.txt  game_over.txt  help_text.txt  settings_title.txt  your_score.txt
resources/: 1.txt  4.txt  7.txt  8.txt  game_over.txt  menu_title.txt
utils/: FilePrinter.cpp  FilePrinter.h  constants.h
